--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,7 @@ python:
     - "3.5"
 
 env:
-    - DJANGO=django==1.8.*
-    - DJANGO=django==1.9.*
+    - DJANGO=django==1.10.*
 
 install:
     - pip install -r test_requirements.txt
@@ -20,9 +19,10 @@ script:
 matrix:
     exclude:
         - python: "3.5"
-          env: DJANGO=django==1.9.*
+          env: DJANGO=django==1.10.*
 
 notifications:
+    email: false
     slack: nonegroupteam:K9RJ3Ksb5pOrYfc6sRuaWm3Z
 
 after_success:
